--- a/iOS-Programming-with-Swift/Listing/TableView_SearchBar/TableView_SearchBar/Base.lproj/Main.storyboard
+++ b/iOS-Programming-with-Swift/Listing/TableView_SearchBar/TableView_SearchBar/Base.lproj/Main.storyboard
@@ -16,7 +16,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <searchBar contentMode="redraw" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Tei-zd-m5A">
+                            <searchBar contentMode="redraw" fixedFrame="YES" placeholder="Arama" translatesAutoresizingMaskIntoConstraints="NO" id="Tei-zd-m5A">
                                 <rect key="frame" x="0.0" y="74" width="414" height="44"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                 <textInputTraits key="textInputTraits"/>
@@ -24,8 +24,17 @@
                                     <outlet property="delegate" destination="BYZ-38-t0r" id="4Nj-Y6-91Y"/>
                                 </connections>
                             </searchBar>
+                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Arama Yap" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="i7m-ee-ruI">
+                                <rect key="frame" x="12" y="144" width="382" height="34"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                                <connections>
+                                    <action selector="tfArama:" destination="BYZ-38-t0r" eventType="editingChanged" id="mru-Lm-gZ5"/>
+                                </connections>
+                            </textField>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="R3n-3N-vF6">
-                                <rect key="frame" x="12" y="125" width="391" height="717"/>
+                                <rect key="frame" x="12" y="208" width="391" height="634"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <connections>
@@ -39,6 +48,7 @@
                     </view>
                     <connections>
                         <outlet property="sbListe" destination="Tei-zd-m5A" id="UlD-W4-453"/>
+                        <outlet property="tfArama" destination="i7m-ee-ruI" id="pYR-mx-fKa"/>
                         <outlet property="tvListe" destination="R3n-3N-vF6" id="cJj-uz-p8V"/>
                     </connections>
                 </viewController>
